--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
   "private": true,
   "dependencies": {
     "@sap/cds": "^8",
+    "@sap/xssec": "^3",
+    "@sap/hdi-deploy": "^4",
+    "passport": "^0.6.0",
     "bcrypt": "^5.1.1",
     "express": "^4",
     "jsonwebtoken": "^9.0.2"
@@ -16,6 +19,8 @@
     "@cap-js/sqlite": "^1"
   },
   "scripts": {
-    "start": "cds-serve"
+    "start": "cds-serve",
+    "build": "cds build --production",
+    "deploy": "cf push"
   }
 }
