--- a/package.json
+++ b/package.json
@@ -12,15 +12,27 @@
     "passport": "^0.6.0",
     "bcrypt": "^5.1.1",
     "express": "^4",
-    "jsonwebtoken": "^9.0.2"
+    "jsonwebtoken": "^9.0.2",
+    "@cap-js/postgres": "^1"
   },
   "devDependencies": {
     "@cap-js/cds-types": "^0.8.0",
     "@cap-js/sqlite": "^1"
   },
-  "scripts": {
-    "start": "cds-serve",
-    "build": "cds build --production",
-    "deploy": "cf push"
+    "scripts": {
+      "start": "cds deploy --to postgres && cds-serve",
+      "build": "cds build --production",
+      "deploy": "cds deploy --to postgres && echo 'Deployment completed'"
+    },
+    "cds": {
+      "requires": {
+        "db": {
+          "kind": "postgres",
+          "model": "db",
+          "vcap": {
+            "label": "postgresql"
+          }
+        }
+      }
+    }
   }
-}
